flux/apps/int/linkding/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app: linkding
  type: ClusterIP
  ports:
    - port: 9090
      name: http
      targetPort: http
      protocol: TCP
